--- a/themes/hugo-bearblog/layouts/_default/single.html
+++ b/themes/hugo-bearblog/layouts/_default/single.html
@@ -17,4 +17,5 @@
   <a href="{{ .Permalink }}">#{{ .LinkTitle }}</a>
   {{ end }}
 </p>
+{{ partial "welcomments/comments" (dict "context" . "websiteId" "E5mR8LbmuNYYIXaL4Zxc" ) }}
 {{ end }}
