--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -160,4 +160,20 @@
     }
   }
 
+  .welcomments__container {
+      margin-top: 4rem;
+  }
+
+  .welcomments__comments-title {
+      color: #eee !important;
+  }
+
+  .welcomments__markdown-notice, .welcomments__email-notice {
+      color: #bbb !important;
+  }
+
+  .welcomments__form-group label {
+      color: #eee !important;
+  }
+
 </style>
